# lifeos

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: apk.yml  ci.yml
.specs/: CONTEXT.md  INDEX.md  SKILLS.md  WORK-ITEMS.md
.specs/work-items/: CHECKIN-001.md  CHECKIN-002.md  COACH-001.md  NOTIF-001.md  PLANNING-001.md  PLATFORM-001.md  PLATFORM-002.md  PLATFORM-003.md  PLATFORM-004.md  REVIEW-001.md  REVIEW-002.md  (+6 more)
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial.py
apps/api/app/: config.py  main.py
apps/api/app/api/: __init__.py
apps/api/app/api/routes/: __init__.py  events.py
apps/api/app/application/: __init__.py  event_models.py
apps/api/app/application/commands/: __init__.py  append_events.py
apps/api/app/application/queries/: __init__.py
apps/api/app/infrastructure/: __init__.py  config_store.py
apps/api/app/infrastructure/db/: __init__.py  base.py  session.py
apps/api/app/infrastructure/event_store/: __init__.py  errors.py  ids.py  registry.py  store.py
apps/api/app/infrastructure/models/: __init__.py  config.py  event.py  outbox.py  snapshot.py
apps/api/app/infrastructure/outbox/: __init__.py  relay.py
apps/api/app/infrastructure/projections/: __init__.py
apps/api/app/infrastructure/snapshots/: __init__.py  store.py
apps/api/tests/: conftest.py  test_event_store.py  test_events_api.py  test_migrations.py
docs/: README.md  index.html
scripts/: codegen.mjs  codegen_py.sh
(+84 files in other folders)
